--- a/FaceTube/FaceTube/Base.lproj/LaunchScreen.storyboard
+++ b/FaceTube/FaceTube/Base.lproj/LaunchScreen.storyboard
@@ -16,8 +16,21 @@
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="launch-logo" translatesAutoresizingMaskIntoConstraints="NO" id="BDg-u4-95A">
+                                <rect key="frame" x="142" y="179" width="317" height="241"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="241" id="jwV-0y-HCr"/>
+                                    <constraint firstAttribute="width" constant="317" id="m2y-43-OlR"/>
+                                </constraints>
+                            </imageView>
+                        </subviews>
                         <animations/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="BDg-u4-95A" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="oJ5-9R-uDV"/>
+                            <constraint firstItem="BDg-u4-95A" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="rxD-iE-fMO"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -25,4 +38,7 @@
             <point key="canvasLocation" x="53" y="375"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="launch-logo" width="965" height="655"/>
+    </resources>
 </document>
