--- a/FaceTube/FaceTube/Base.lproj/Main.storyboard
+++ b/FaceTube/FaceTube/Base.lproj/Main.storyboard
@@ -189,10 +189,31 @@
                             <constraint firstItem="dDf-Kb-yj4" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="54" id="bzV-6t-YT7"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <segue destination="SGw-2j-jFx" kind="show" identifier="LoggedIn" id="dcN-5y-VO0"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="559" y="429"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="ynC-Bx-ZuR">
+            <objects>
+                <viewController id="SGw-2j-jFx" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="Gfg-IS-G1y"/>
+                        <viewControllerLayoutGuide type="bottom" id="T5n-TA-cFp"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="Ixa-v2-oxl">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" red="0.1176470588" green="0.5450980392" blue="0.8980392157" alpha="1" colorSpace="calibratedRGB"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="5KJ-NV-9lD" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1277" y="429"/>
         </scene>
     </scenes>
     <resources>
