--- a/FaceTube/FaceTube/Base.lproj/Main.storyboard
+++ b/FaceTube/FaceTube/Base.lproj/Main.storyboard
@@ -72,7 +72,7 @@
                                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="facebook-icon" translatesAutoresizingMaskIntoConstraints="NO" id="eUY-nm-UwB">
                                                 <rect key="frame" x="0.0" y="22" width="65" height="65"/>
                                             </imageView>
-                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="d4Q-x2-uIt" customClass="MaterialButton" customModule="FaceTube" customModuleProvider="target">
+                                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="d4Q-x2-uIt" customClass="MaterialButton" customModule="FaceTube" customModuleProvider="target">
                                                 <rect key="frame" x="105" y="38" width="415" height="33"/>
                                                 <color key="backgroundColor" red="0.11764705882352941" green="0.54509803921568623" blue="0.89803921568627454" alpha="1" colorSpace="calibratedRGB"/>
                                                 <fontDescription key="fontDescription" name="NotoSans-Bold" family="Noto Sans" pointSize="15"/>
@@ -218,22 +218,29 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="WBj-b8-3ue" customClass="MaterialView" customModule="FaceTube" customModuleProvider="target">
+                                <rect key="frame" x="20" y="72" width="560" height="55"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="55" id="sMm-Zm-Gjb"/>
+                                </constraints>
+                            </view>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="380" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="hti-1A-GEK">
-                                <rect key="frame" x="20" y="64" width="560" height="536"/>
-                                <color key="backgroundColor" red="0.87843137250000003" green="0.87843137250000003" blue="0.87843137250000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <rect key="frame" x="20" y="135" width="560" height="465"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="PostCell" id="yGw-II-rBx" customClass="PostCell" customModule="FaceTube" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="92" width="560" height="380"/>
+                                        <rect key="frame" x="0.0" y="28" width="560" height="380"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="yGw-II-rBx" id="gln-IK-CJT">
                                             <rect key="frame" x="0.0" y="0.0" width="560" height="380"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="8YP-xG-Xyj" userLabel="Container" customClass="MaterialView" customModule="FaceTube" customModuleProvider="target">
-                                                    <rect key="frame" x="0.0" y="8" width="560" height="363"/>
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8YP-xG-Xyj" userLabel="Container" customClass="MaterialView" customModule="FaceTube" customModuleProvider="target">
+                                                    <rect key="frame" x="0.0" y="8" width="560" height="364"/>
                                                     <subviews>
-                                                        <stackView opaque="NO" contentMode="scaleToFill" misplaced="YES" axis="vertical" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="NEC-wX-cdj">
-                                                            <rect key="frame" x="19" y="0.0" width="544" height="348"/>
+                                                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="NEC-wX-cdj">
+                                                            <rect key="frame" x="8" y="8" width="544" height="348"/>
                                                             <subviews>
                                                                 <stackView opaque="NO" contentMode="scaleToFill" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="l6u-e7-Tbu">
                                                                     <rect key="frame" x="0.0" y="0.0" width="544" height="50"/>
@@ -324,11 +331,20 @@
                         </subviews>
                         <color key="backgroundColor" red="0.8784313725490196" green="0.8784313725490196" blue="0.8784313725490196" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
+                            <constraint firstItem="WBj-b8-3ue" firstAttribute="top" secondItem="Gfg-IS-G1y" secondAttribute="bottom" constant="8" id="O8H-lK-ey5"/>
                             <constraint firstItem="T5n-TA-cFp" firstAttribute="top" secondItem="hti-1A-GEK" secondAttribute="bottom" id="RGs-Jp-oec"/>
                             <constraint firstItem="hti-1A-GEK" firstAttribute="trailing" secondItem="Ixa-v2-oxl" secondAttribute="trailingMargin" id="fma-Cd-uF6"/>
                             <constraint firstItem="hti-1A-GEK" firstAttribute="top" secondItem="Gfg-IS-G1y" secondAttribute="bottom" id="iNX-7n-X4T"/>
+                            <constraint firstItem="WBj-b8-3ue" firstAttribute="leading" secondItem="Ixa-v2-oxl" secondAttribute="leadingMargin" id="kbg-YL-9wt"/>
+                            <constraint firstItem="WBj-b8-3ue" firstAttribute="trailing" secondItem="Ixa-v2-oxl" secondAttribute="trailingMargin" id="lS0-Fy-e46"/>
                             <constraint firstItem="hti-1A-GEK" firstAttribute="leading" secondItem="Ixa-v2-oxl" secondAttribute="leadingMargin" id="nPI-ZV-esv"/>
+                            <constraint firstItem="hti-1A-GEK" firstAttribute="top" secondItem="WBj-b8-3ue" secondAttribute="bottom" constant="8" id="uXZ-ev-KZv"/>
                         </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="iNX-7n-X4T"/>
+                            </mask>
+                        </variation>
                     </view>
                     <navigationItem key="navigationItem" id="LqU-fB-USW"/>
                     <connections>
